style/style.css
html,
body {
  height: 100%;
}
nav {
  top: 0;
  overflow: hidden;
  position: fixed;
  width: 100%;
  margin-bottom: 2em;
  z-index: 1;
  display: block;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #151515;
  color: darkcyan;
}

li {
  float: left;
}

li a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

li a:hover {
  background-color: #7e191b;
  color: #151515;
}

li:last-child {
  border-right: none;
  background-color: grey;
  color: #151515;
}

a:active {
  background-color: grey;
}

.title-text {
  /* background-color: #0080ff; */
  color: #151515;
  padding: 1em;
}
.title-text h1 {
  background-color: antiquewhite;
  opacity: 0.9;
  padding: 1em;
  margin-top: 1em;
  width: 100%;
}
.title-text h3{
  background-color: rgba(255, 255, 255, 0.7);
  padding: 1em;
}

.max{
  height: 60%;
  margin-bottom: 60%;
  text-align: center;
}

.max img{
  display: inline-block;
  float: center;
  height: 500px;
}
.max h3{
  font-size: 3em;
  background-color: rgba(255, 255, 255, 0.7);
  border-radius: 0.7em;


}

.bg {
  background-image: url("../img/bkg.jpg");
  height: auto;
  min-height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;

}

.bg h3{
  color: #944109;
  font: Arial, serif;
}

.title-text h1{
  color:  #5e2804;
  font: Arial, sans-serif;
  font-size: 50px;
  text-align: center;
}
.title-text h3{
  color:  #a84a0b;
  font: Arial, sans-serif;
  font-size: 25px;
  text-align: center;
}
.main-text{

}
footer {
  background-color: #151515;
  bottom: 0;
  position: relative;
  width: 100%;
  color: antiquewhite;
}
.text-block {
  color: #151515;
  background-color: rgba(255, 255, 255, 0.7);
  padding: 0.3em;
}

.cuisine-tags {
  text-align: center;
  display: inline-block;
  border-radius: 0.7em;
  width: 100%;
  padding: 0.7em;
}
.cuisine-item {
  display: inline-block;
  width: 30%;
  font-size: 30px;
  color: #662a08;
  font: Arial, serif;
  font-weight: bold;
}

.cuisine-item img {
  width: auto;
  border-radius: 0.3em;
  border: burlywood;
  border-style: solid;
  border-width: 3px;
  margin: 0.7em;
}


.container {
    border-radius: 5px;
    background-color: burlywood;

    width: 50%;
    margin: auto;
}

#contact {
    /* background: rgb(222,184,135,.7); */
    padding: 25px;
    text-align: left;

}
#contact p {

    margin: auto;
}


form {
  background: rgb(222,184,135,.7);
  padding: 15px;
  display: inline-block;

  
}
.container form{
  display: inline-block;
}

#contact input,
select,
textarea {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

#register {
    width: 50%;
    align-content: center;
    margin: auto;
}

#register input,
select,
textarea {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}
#login {
    padding-top: 40px;
    width: 50%;
    align-content: center;
    margin: auto;
}

#login input,
select,
textarea {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

/* STOLEN STYLING */
#myInput {
  background-image: url('/css/searchicon.png'); /* Add a search icon to input */
  background-position: 10px 12px; /* Position the search icon */
  background-repeat: no-repeat; /* Do not repeat the icon image */
  width: 100%; /* Full-width */
  font-size: 16px; /* Increase font-size */
  padding: 12px 20px 12px 40px; /* Add some padding */
  border: 1px solid #ddd; /* Add a grey border */
  margin-bottom: 12px; /* Add some space below the input */
}

#myUL {
  /* Remove default list styling */
  list-style-type: none;
  padding: 0;
  margin: 0;
}

#myUL li a {
  border: 1px solid #ddd; /* Add a border to all links */
  margin-top: -1px; /* Prevent double borders */
  background-color: #f6f6f6; /* Grey background color */
  padding: 12px; /* Add some padding */
  text-decoration: none; /* Remove default text underline */
  font-size: 18px; /* Increase the font-size */
  color: black; /* Add a black text color */
  display: block; /* Make it into a block element to fill the whole list */
}

#myUL li a:hover:not(.header) {
  background-color: #eee; /* Add a hover effect to all links, except for headers */
}
/* END STOLEN STYLINGs */

.menu-content{
  display: block;
  text-align: center;
  
}
.left-buttons{

 height: 80%;
  width: 10%;
  position: fixed;
  z-index: 1;
  bottom: 0;
  left: 0;
  background-color: #111;
  overflow-x: hidden;
  padding-top: 20px;
  margin-top: 3em;
  /* padding: 3em; */
}
.left-buttons button{
  background-color: rgb(160, 79, 12);
  color: rgba(255, 255, 255, 0.7);
  padding: 1em;
  width: 70%;
  font-weight: bold;
  font-family: Georgia, 'Times New Roman', Times, serif;
}

.menu-item{
  display: inline-block;
  width: 70%;
  right: 0;
}
.menu-item img{
  height: 200px
  
}
.menu-item h2{
  color: rgb(173, 79, 16);
  font-weight: bold;
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-size: 30px;
}
.food-items{
  display: inline-block;
}
.item{
  display: inline-block;
}
.arrangement{
  text-align: center;
  height: 80%;
}
.col4{
  width: 20%;
  display: inline-block;
  background-color: rgba(255, 255, 255, 0.7);
  height: 100%;
  padding: 1em;
  border-radius: .7em;
}
.col4 h2{
  font-size: 35px;
  color: rgb(88, 36, 5)
}
.col4 img{
  height: 200px;
  margin-top: 3em;
  margin-bottom: 3em;
}
.col-text{
  font-size: 18px;
}
.col3{
  width: 25%;
  display: inline-block;
  background-color: rgba(255, 255, 255, 0.7);
  height: 100%;
  padding: 1em;
  border-radius: .7em;
  font-size: 50px; 
  color:#502203;
  font-weight: bold;  
}
.col3 h5{
  color: #8f3d0e;
}
.col3 img{
  height: 200px;
  margin-top: 3em;
  margin-bottom: 3em;
}
.col-md-3{
  background-color: #fff;
  display: inline-block;
}
.column{
  float: left;
  width: 50%;
}

